--- a/src/components/TodoApp/TodoItem/TodoItem.scss
+++ b/src/components/TodoApp/TodoItem/TodoItem.scss
@@ -10,6 +10,11 @@
 	column-gap: 2rem;
 }
 
+.todo-item__label {
+	word-break: break-all;
+	max-width: 90%;
+}
+
 .todo-item__label.completed {
 	text-decoration: line-through;
 	color: var(--secondary-text-color);
