--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,7 @@ body {
 		--box-shadow-color: rgba(34, 60, 80, 0.2);
 		--theme-transition: all var(--theme-transition-duration);
 		--theme-transition-duration: .4s;
+		--validation-color: #941a12;
 
 	&[data-theme='dark'] {
 		background-color: hsl(235, 24%, 19%);;
@@ -28,6 +29,7 @@ body {
 		--desktop-img: url("assets/images/bg-desktop-dark.jpg");
 		--mobile-img: url("assets/images/bg-mobile-dark.jpg");
 		--box-shadow-color: rgba(0, 0, 0, 0.2);
+		--validation-color: #f83420;;
 	}
 	}
 
